--- a/pom.xml
+++ b/pom.xml
@@ -9,21 +9,16 @@
     <version>1.0-SNAPSHOT</version>
 
     <properties>
-        <spark.version>2.2.0</spark.version>
+        <spark.version>2.3.0</spark.version>
         <scala.binary.version>2.11</scala.binary.version>
     </properties>
 
-
     <dependencies>
-
-
         <dependency>
             <groupId>org.apache.spark</groupId>
             <artifactId>spark-core_${scala.binary.version}</artifactId>
             <version>${spark.version}</version>
         </dependency>
-
-
         <dependency>
             <groupId>org.apache.spark</groupId>
             <artifactId>spark-sql_${scala.binary.version}</artifactId>
@@ -31,6 +26,16 @@
         </dependency>
 
     </dependencies>
-
-
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>8</source>
+                    <target>8</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
