--- a/pom.xml
+++ b/pom.xml
@@ -7,30 +7,32 @@
     <groupId>spark-practice</groupId>
     <artifactId>language-detection</artifactId>
     <version>1.0-SNAPSHOT</version>
-
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
     <properties>
         <spark.version>2.2.0</spark.version>
         <scala.binary.version>2.11</scala.binary.version>
     </properties>
-
-
     <dependencies>
-
-
         <dependency>
             <groupId>org.apache.spark</groupId>
             <artifactId>spark-core_${scala.binary.version}</artifactId>
             <version>${spark.version}</version>
         </dependency>
-
-
         <dependency>
             <groupId>org.apache.spark</groupId>
             <artifactId>spark-sql_${scala.binary.version}</artifactId>
             <version>${spark.version}</version>
         </dependency>
-
     </dependencies>
-
-
 </project>
